exercises/security/ServiceMesh-GreeterWeather/istio/authorization/greeter-weather-svc-sa.yaml
apiVersion: v1
kind: Service
metadata:
    name: greetandweather-service
    namespace: greet-ns
    labels:
        app: greeter-weather
        version: v1
spec:
    selector:
        app: greeter-weather
    ports:
        - port: 3000 
          targetPort: 3000
          name: http
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: greetandweather-service-v1
    namespace: greet-ns
    labels:
        app: greeter-weather
        version: v1
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: greeter-weather
                version: v1
        spec:
            serviceAccountName: greet-and-weather-admin
            containers:
                - image: skzern/greeter-weather:1.0.1
                  imagePullPolicy: Always
                  name: greetandweather
                  ports:
                      - containerPort: 3000
